<resources>
    <string name="app_name">CalculateVolume</string>
    <string name="panjang">Panjang</string>
    <string name="inputkan_panjang">Inputkan Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="inputkan_lebar">Inputkan Lebar</string>
    <string name="tinggi">Tinggi</string>
    <string name="inputkan_tinggi">Inputkan Tinggi</string>
    <string name="hitung_volume">Hitung Volume</string>
    <string name="aplikasi_penghitung_volume_balok">Aplikasi Penghitung Volume Balok</string>
    <string name="volume_balok">Volume Balok</string>
    <string name="reset">Reset</string>
    <string name="kubus">Kubus</string>
    <string name="balok">Balok</string>
    <string name="prisma">Prisma</string>
    <string name="kerucut">Kerucut</string>
    <string name="aplikasi_penghitung_volume_kubus">Aplikasi Penghitung Volume Kubus</string>
    <string name="panjang_sisi">Panjang Sisi</string>
    <string name="develop_by_eka_putra">Develop by Eka Putra</string>
    <string name="aplikasi_penghitung_volume_limas">Aplikasi Penghitung Volume Limas</string>
    <string name="volume_limas">Volume Limas</string>
    <string name="limas">Limas</string>
    <string name="aplikasi_penghitung_volume_kerucut">Aplikasi Penghitung Volume Kerucut</string>
    <string name="jari_jari">Jari-Jari</string>
    <string name="inputkan_jari_jari">Inputkan Jari-Jari</string>
    <string name="volume_kerucut">Volume Kerucut</string>
</resources>