<?xml version="1.0" encoding="UTF-8" ?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".HitungVolumeKubusActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/header_kubus" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="5dp"
            android:paddingBottom="30dp"
            android:text="@string/aplikasi_penghitung_volume_kubus"
            android:textColor="@color/purple_700"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/panjang_sisi"
            android:textColor="@color/purple_700"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_sisi_kubus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:hint="@string/inputkan_panjang"
            android:inputType="numberDecimal"
            android:lines="1"
            android:textColor="@color/purple_500" />

        <Button
            android:id="@+id/btn_hitung_kubus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/rounded_button_background"
            android:text="@string/hitung_volume"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_volume_kubus"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/volume_balok"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_reset_kubus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_background_reset"
                android:paddingHorizontal="15dp"
                android:text="@string/reset"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/footer" />

</LinearLayout>