<?xml version="1.0" encoding="UTF-8" ?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:scaleType="centerCrop"
        android:src="@drawable/header_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <!-- Card 1 -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/card"
            app:cardBackgroundColor="@android:color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/kubus" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/kubus"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_kubus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/rounded_button_background"
                    android:paddingHorizontal="15dp"
                    android:text="@string/hitung_volume"
                    android:textColor="@color/white" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Card 2 -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/card"
            app:cardBackgroundColor="@android:color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/balok" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/balok"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_balok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/rounded_button_background"
                    android:paddingHorizontal="15dp"
                    android:text="@string/hitung_volume"
                    android:textColor="@color/white" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <!-- Card 3 -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/card"
            app:cardBackgroundColor="@android:color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/limas" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/prisma"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_limas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/rounded_button_background"
                    android:paddingHorizontal="15dp"
                    android:text="@string/hitung_volume"
                    android:textColor="@color/white" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Card 4 -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/card"
            app:cardBackgroundColor="@android:color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/kerucut" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/kerucut"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_kerucut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/rounded_button_background"
                    android:paddingHorizontal="15dp"
                    android:text="@string/hitung_volume"
                    android:textColor="@color/white" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/develop_by_eka_putra"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="12sp"
        android:textStyle="bold" />

</LinearLayout>